--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>project details</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>Profile Card</title>
 </head>
 <body>
-
-    <h1>this is the first project</h1>
-    <h2>program</h2>
+    <div class="profile-card">
+        <img src="https://via.placeholder.com/150" alt="Profile Picture" class="profile-img">
+        <h2 class="name">John Doe</h2>
+        <p class="title">Web Developer</p>
+        <p class="bio">Passionate about building responsive and user-friendly websites.</p>
+        <a href="#" class="button">Contact</a>
+    </div>
 </body>
+</html>
